Fixed logo alignment in fundingSponsor.js

--- a/themes/covid_common.css
+++ b/themes/covid_common.css
@@ -222,7 +222,7 @@ Primary use:    Common.css file used for styling header, footer and
 }
 
 .display-flex {
-    display: flex;
+    display: flex !important;
     flex-wrap: wrap;
 }
 
